# kafka-order-processing-system

./: .gitignore  README.md  docker-compose.yml
notification/: Dockerfile  main.py  pyproject.toml  requirements.txt
notification/app/: consumer.py  main.py
order/: Dockerfile  main.py  pyproject.toml  requirements.txt
order/app/: main.py
order/app/events/: producer.py
order/app/routers/: order.py
order/app/schemas/: order.py
processing/: Dockerfile  main.py  pyproject.toml  requirements.txt
processing/app/: config.py  consumer.py  main.py  producer.py
